# I_CAN_Robot

./: .gitmodules  DUAL_PATH_ARCHITECTURE.md  Fix_Build.sh  QUICK_START_NEW_TOOLS.md  README.md  Robot_Dev_Install.sh  Robot_Full_Install.sh  Robot_MCP_Install.sh  Robot_Remote_Install.sh  VENV_README.md  create_file_structure.sh  test_new_tools.py
go2_simple_nav/: README.md  package.xml  publish_webcam_image.py  setup.cfg  setup.py
go2_simple_nav/config/: params.yaml
go2_simple_nav/go2_simple_nav/: attract_only_goal_webrtc.py  image_capture_helper.py  joystick_goal_webrtc.py  ollama_helper.py  qwen3_vl_node.py  send_goal_once.py  utils.py  visualization_imports.py
go2_simple_nav/launch/: attract_only.launch.py  joystick_goal_webrtc.launch.py  qwen3_vl.launch.py
ican_brain/: README.md  package.xml  setup.cfg  setup.py
ican_brain/ican_brain/: __init__.py  debug_monitor.py  ollama_node.py  prompt_node.py
ican_brain/launch/: ican_brain_remote.launch.py
ican_brain/scripts/: test_ollama.sh
ican_bringup/: package.xml  setup.cfg  setup.py
ican_bringup/launch/: debug.launch.py  local_nodes.launch.py  remote_nodes.launch.py  sim_dog.launch.py
ican_description/: package.xml  setup.cfg  setup.py
ican_gazebo/: README_GZ_HUMBLE.md  package.xml  setup.cfg  setup.py
ican_gazebo/launch/: gz_debug_twin.launch.py  gz_humble_local_launch.py  gz_humble_remote_launch.py  gz_jazzy_launch.py
ican_gazebo/worlds/: empty.sdf  empty.world  turtlebot3_house.world
ican_mcp_server/: BEHAVIOR_SERVER_README.md  BEHAVIOR_SERVER_SUMMARY.md  MCP_INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SENSES_SERVER_README.md  package.xml  setup.cfg  setup.py
ican_mcp_server/ican_mcp_server/: __init__.py  behavior_server.py  dice_mcp_node.py  dice_service_node.py  senses_server.py
ican_move/: package.xml  setup.cfg  setup.py
ican_move/ican_move/: teleop_node.py
ican_move/launch/: teleop.launch.py
ican_orchestrator/: TEST_MCP_INTEGRATION.md  package.xml  setup.cfg  setup.py
ican_orchestrator/ican_orchestrator/: __init__.py  brain_node.py  ollama_chat.py  ollama_mcp_chat.py  ollama_node.py  ollama_query.py  ollama_tool_node.py  prompt_node.py
ican_orchestrator/ican_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
ican_scripts/: Humble_Local_Install.sh  Robot_Remote_Install.sh  install_audio_deps.sh  install_humble_local.sh  install_humble_remote.sh  install_jazzy_local.sh  install_jazzy_remote.sh  install_local_audio.sh  install_remote_audio.sh
ican_see/: README.md  YOLO_SETUP.md  package.xml  setup.cfg  setup.py
ican_see/ican_see/: cam_node_ffmpeg.py  cam_node_gstreamer.py  cam_node_opencv.py  cam_node_robust.py  test_yolo.py  yolo_server_node.py
ican_tools/: README.md  package.xml  setup.cfg  setup.py
ican_tools/ican_tools/: move_robot_node.py  query_room_node.py  tool_manager_node.py
ican_tools/launch/: ican_tools_remote.launch.py
ican_voice/: AUDIO_TEST_GUIDE.md  COMPLETION_SUMMARY.md  QUICK_REFERENCE.md  README.md  SETUP_PROMPT.md  VENV_README.md  WSL2_AUDIO_SETUP.md  cuda_env_setup.sh  install_dependencies.sh  package.xml  setup.cfg  setup.py  test_voice_node.sh
ican_voice/ican_voice/: __init__.py  audio_playback_ffmpeg.py  audio_playback_node.py  audio_playback_node_old.py  audio_streamer_node.py  test_audio_playback.py  test_audio_streamer.py  test_ffmpeg_stream.py  test_sound_node.py  test_tts.py  test_tts_to_file.py  test_vosk.py  test_whisper.py  test_whisper_to_tts.py  tts_node.py  voice_node.py  vosk_node.py  vosk_server_node.py  whisper_server_node.py
ican_voice/launch/: ican_voice_remote.launch.py  voice_node.launch.py
ican_voice/scripts/: run_whisper_server.sh  test_audo.sh
