<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ican_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configuration for bringing up I_CAN Robot system components</description>
  <maintainer email="user@todo.todo">fire</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <exec_depend>ican_description</exec_depend>
  <exec_depend>ican_gazebo</exec_depend>
  <exec_depend>ican_mcp_server</exec_depend>
  <exec_depend>ican_orchestrator</exec_depend>
  <exec_depend>ican_voice</exec_depend>

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
