<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ican_voice</name>
  <version>0.0.0</version>
  <description>Voice input node for I_CAN Robot - captures audio and transcribes speech using faster-whisper</description>
  <maintainer email="user@todo.todo">fire</maintainer>
  <license>Apache-2.0</license>

  <!-- Build tool dependencies -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS 2 dependencies -->
  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <!-- Python dependencies (for documentation) -->
  <!-- Note: These must be installed via pip in your venv:
       pip install pyaudio numpy faster-whisper
  -->
  <exec_depend>python3-numpy</exec_depend>
  
  <!-- System dependencies for PyAudio -->
  <!-- On Ubuntu/Debian, install: sudo apt-get install portaudio19-dev python3-pyaudio -->

  <!-- Test dependencies -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
